--- a/examples/maven.yml
+++ b/examples/maven.yml
@@ -1,10 +1,6 @@
 version: 1.0
 name: my-test2
 stages:
-  remote-action:
-    steps:
-      - name: remote-shell
-        uses: mohaijiang/hello-world-action
   git-clone:
     steps:
       - name: git-clone
@@ -25,6 +21,7 @@ stages:
         with:
           name: some.zip
           path:
+            - target/*.jar
   build-image:
     needs:
       - code-compile
