--- a/.github/workflows/github-actions-build.yml
+++ b/.github/workflows/github-actions-build.yml
@@ -23,7 +23,7 @@ jobs:
 #        with:
 #          node-version: ${{ matrix.node-version }}
       # You may need to manually build you frontend manually here, unless you have configured frontend build and install commands in wails.json.
-      - name: Get Wails
+      - name: go build
         run: go mod tidy && go build -o a-line-cli
       - name: Login to Docker Hub
         uses: docker/login-action@v2
