--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,11 @@ services:
       DOCKER_TLS_CERTDIR: /certs
     volumes:
       - "docker-certs:/certs"
-      - "a-line-workdir:/tmp/example"
+      - "a-line-workdir:/root/pipelines"
+      - "./build/daemon.json:/etc/docker/daemon.json"
+      - "tmp-dir:/root/workdir"
     ports:
       - "2376:2376"
-    command:
-      - --storage-driver
-      - overlay2
 
   a-line-cli:
     image: hamstershare/a-line-cli:latest
@@ -28,7 +27,8 @@ services:
       DOCKER_TLS_VERIFY: "1"
     volumes:
       - "docker-certs:/certs:ro "
-      - "a-line-workdir:/tmp/example"
+      - "a-line-workdir:/root/pipelines"
+      - "tmp-dir:/root/workdir"
     ports:
       - "8080:8080"
 
@@ -36,6 +36,6 @@ services:
 volumes:
   docker-certs: {}
   a-line-workdir: {}
-
+  tmp-dir: {}
 networks:
   a-line: {}
